--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,21 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+@keyframes scaleLeftToRight {
+  0% {
+    transform: scaleX(0);
+    transform-origin: left;
+    opacity: 0;
+  }
+  100% {
+    transform: scaleX(1);
+    transform-origin: left;
+    opacity: 1;
+  }
+}
+
+.animate-scale-lr {
+  animation: scaleLeftToRight 0.8s ease-out forwards;
+}
